components/Gallery.css
div.gallery {
	justify-items: left;
}

div.fullview {
	position: fixed;
	left: 0;
	top: 0;
	width: 100vw;
	height: 100vh;
	display: flex;
	flex-direction: column;
	row-gap: 1vh;
	background-color: #000000C0;
	justify-content: center;
	align-items: center;
	cursor: zoom-out;
}

div.fullviewinfo {
	padding: 0.25rem 1rem;
	border-radius: 0.5rem;
	text-decoration: none;
	color: #222;
	background-color: #f1f1f1;
	border: 1px solid transparent;
}

@media (max-width: 991px) {
	img.active {
		display: none;
	}
}

img.active, iframe.active, img.thumbnail {
	width: 100%;
	height: auto;
	max-width: 100%;
	max-height: 100%;
	object-fit: contain;
	aspect-ratio: 16/9;
}

img.fullview {
	max-height: 85%;
	max-width: 95%;
	width: auto;
	height: auto;
	object-fit: contain;
}

img.active, iframe.active, img.thumbnail {
	cursor: zoom-in;
}

@media (prefers-color-scheme: dark) {
	div.fullviewinfo {
		color: #ccc;
		background-color: #161616;
	}
}

